--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vueexercise",
+  "name": "vueexercise_cywon",
   "version": "1.0.0",
   "description": "vue study exercise",
   "main": "index.js",
